2007-05-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, canon.c, canon.h,Makefile-files:
	  Removed CANON_EXPERIMENTAL_20D define, now default included.

2007-05-25  Paul Walmsley <paul@booyaka.com>

	* usb.c: fix canon_usb_get_body_id() and caller to handle body IDs
	  > INT32_MAX (as seen in some recent Canon EOS 5D bodies)

	* canon.h: add body_id field to the CameraPrivateLibrary structure

2007-05-21  Marcus Meissner  <marcus@jet.franken.de>

	* canon.c: Handle A70 and A80 in ptp2 driver, since this one
	  has better capture handling.

	* Makefile-files: Enable -DCANON_EXPERIMENTAL_SET_RELEASE_PARAMS
	  by default.

2007-03-13  Marcus Meissner  <marcus@jet.franken.de>

	* canon.c: Handle A95 and S50 in ptp2 driver.
	  http://sourceforge.net/tracker/index.php?func=detail&aid=1629132&group_id=8874&atid=108874

2007-01-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Return storage information programmatically.

2006-11-13  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Readded to Optura 20 (alternate id),
	  confirmed by reporter.

2006-06-24  David Selmeczi <seldavid@gmail.com>

	* library.c,canon.c: Added more 350D parameters.

2006-06-20  Marcus Meissner  <marcus@jet.franken.de>
	    Karl Tomlinson  <ktomlinson@users.sf.net>

	* library.c: Keep list_all_files setting permanent.

	* library.c: Also delete thumbnails (but only if
	  list_all_files is not set.)

2006-06-14  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Mark up strings for translation.
	  Compare against translated string.
	
	  Mark up configuration widgets with symbolic names to
	  avoid spaces or translated strings in commandline modes.

2006-06-12  Paul Walmsley  <paul@booyaka.com>

	* canon.h: Fix build failure when CANON_EXPERIMENTAL_20D is not
	defined, by wrapping the release_params array in an '#ifdef
	CANON_EXPERIMENTAL_20D'

2006-06-11  Paul Walmsley  <paul@booyaka.com>

	* usb.c: Fix the debug messages in canon_usb_dialogue_full() to